Revert "Add min-height to Ada metadata to prevent wrapping"
This reverts commit eac9e65fd487ea96a826a984550e9da95dbfc70c.

--- a/src/scss/cs/page-title.scss
+++ b/src/scss/cs/page-title.scss
@@ -31,9 +31,3 @@ h1#main-heading {
   font-weight: 600;
   min-height: 50px;
 }
-
-.page-metadata {
-    .title-action-bar {
-        min-height: 4rem;
-    }
-}
